[project]
name = "llm-io-intelligence"
version = "0.1.0"
description = "Plugin for LLM adding support for io intelligence API models"
readme = "README.md"
authors = [{name = "LLM IO Intelligence Plugin"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "llm>=0.9",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/io-intelligence/llm-io-intelligence"
Documentation = "https://docs.io.net/reference/get-started-with-io-intelligence-api"
Issues = "https://github.com/io-intelligence/llm-io-intelligence/issues"

[project.entry-points.llm]
llm-io-intelligence = "llm_io_intelligence"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_io_intelligence"] 